Fixed poor color contrast of text on blue background (added --white-color to root)

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,7 @@ $screen-md-min: 1200px; // < 1200 px (large desktops
   --secondary-color: #abd1fc;
   --light-color: #f5f5f5;
   --dark-color: rgb(41, 41, 41);
+  --white-color: #ffffff;
 }
 
 .color-primary {
@@ -146,7 +147,7 @@ h1 {
 
 .section2-list {
   font-family: "Muli", sans-serif;
-  color: var(--light-color);
+  color: var(--white-color);
   list-style: none;
   margin: 2%;
   padding: 0;
@@ -387,7 +388,7 @@ li {
   padding: 10px;
   border: none;
   background-color: var(--primary-color);
-  color: var(--light-color);
+  color: var(--white-color);
   font-size: 18px;
   font-family: "Muli", sans-serif;
   letter-spacing: 0.1em;
